refactor: replace constructor with lombook annotation